# pdf_splitter

./: README.md  pyproject.toml
pdf_splitter/: __init__.py
