[tool.poetry]
name = "pdf-splitter"
version = "0.1.0"
description = ""
authors = ["Pedro Balbino <phsb5321@gmail.com>"]
readme = "README.md"
packages = [{include = "pdf_splitter"}]

[tool.poetry.dependencies]
python = "^3.10"
pypdf2 = "^3.0.1"
pdf2image = "^1.16.3"
ghostscript = "^0.7"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
